# routes/index.js
@@ -4,6 +4,6 @@ routes.get('/', (req, res) => {
   res.send(' Hello Sadiq Abubakar');
   
 });
-routes.use('/contacts', require('./contacts'))
+routes.use('/recipe', require('./recipe'))
 routes.use('/swagger', require('./swagger'))
 module.exports = routes;
